[gd_scene load_steps=14 format=3 uid="uid://en0mt7v4ddrg"]

[ext_resource type="Script" path="res://main.gd" id="1_h1xnr"]
[ext_resource type="Theme" uid="uid://dseywhd5dettr" path="res://resources/project_default.tres" id="2_6rl77"]
[ext_resource type="PackedScene" uid="uid://d02o5ib62ed0d" path="res://ui/main_menu.tscn" id="3_u87eg"]
[ext_resource type="PackedScene" uid="uid://cypy5mb0rfmk7" path="res://ui/project_viewer/project_viewer.tscn" id="4_48ush"]
[ext_resource type="PackedScene" uid="uid://kadsves1l116" path="res://ui/toolbar.tscn" id="4_ioe6v"]
[ext_resource type="PackedScene" uid="uid://mmirfa2yhj50" path="res://ui/xml_tree_viewer/xml_tree_viewer.tscn" id="5_4qjjb"]
[ext_resource type="PackedScene" uid="uid://dkh7n1euog8gl" path="res://ui/image_viewer/image_viewer.tscn" id="5_ikjut"]
[ext_resource type="PackedScene" uid="uid://bdsyjmvhhrl76" path="res://ui/dialogs/type_change_window.tscn" id="6_xn5xa"]
[ext_resource type="PackedScene" uid="uid://bub4qah0tbwdj" path="res://ui/status_bar.tscn" id="8_87pkj"]
[ext_resource type="PackedScene" uid="uid://fxwcfnsk0rgt" path="res://ui/dialogs/diff_window.tscn" id="11_3hrp5"]
[ext_resource type="PackedScene" uid="uid://myj67o0jfstd" path="res://ui/dialogs/evaluation_window.tscn" id="11_8k5ry"]
[ext_resource type="PackedScene" uid="uid://drge4asvwjmcu" path="res://ui/context/image_view_context_menu.tscn" id="12_p38sp"]
[ext_resource type="PackedScene" uid="uid://chyc6mjjmyek7" path="res://ui/context/project_view_context_menu.tscn" id="13_sobsl"]

[node name="Main" type="Node"]
script = ExtResource("1_h1xnr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WaitPanel" type="Panel" parent="CanvasLayer"]
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MainWindow" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6rl77")

[node name="MainMenu" parent="CanvasLayer/MainWindow" instance=ExtResource("3_u87eg")]
layout_mode = 2

[node name="Toolbar" parent="CanvasLayer/MainWindow" instance=ExtResource("4_ioe6v")]
layout_mode = 2

[node name="Middle" type="HSplitContainer" parent="CanvasLayer/MainWindow"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="ImageViewer" parent="CanvasLayer/MainWindow/Middle" instance=ExtResource("5_ikjut")]
layout_mode = 2

[node name="RightSide" type="VSplitContainer" parent="CanvasLayer/MainWindow/Middle"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
split_offset = 165

[node name="ProjectViewer" parent="CanvasLayer/MainWindow/Middle/RightSide" instance=ExtResource("4_48ush")]
layout_mode = 2

[node name="XMLTreeViewer" parent="CanvasLayer/MainWindow/Middle/RightSide" instance=ExtResource("5_4qjjb")]
layout_mode = 2

[node name="StatusBar" parent="CanvasLayer/MainWindow" instance=ExtResource("8_87pkj")]
layout_mode = 2
size_flags_vertical = 8

[node name="Dialogs" type="Node" parent="CanvasLayer"]

[node name="NewProjectDialog" type="FileDialog" parent="CanvasLayer/Dialogs"]
title = "Open File(s)"
ok_button_text = "열기"
file_mode = 1
access = 2
filters = PackedStringArray("*.xml, *.png, *.jpg, *.jpeg")
use_native_dialog = true

[node name="AddXMLDialog" type="FileDialog" parent="CanvasLayer/Dialogs"]
title = "Open File(s)"
size = Vector2i(334, 159)
ok_button_text = "열기"
file_mode = 1
access = 2
filters = PackedStringArray("*.xml;XML Files")
use_native_dialog = true

[node name="SaveAsFilesDialog" type="FileDialog" parent="CanvasLayer/Dialogs"]
size = Vector2i(289, 154)
ok_button_text = "저장"
access = 2
filters = PackedStringArray("*.xml ; XML File")
use_native_dialog = true

[node name="SaveImageDialog" type="FileDialog" parent="CanvasLayer/Dialogs"]
size = Vector2i(289, 154)
ok_button_text = "저장"
access = 2
filters = PackedStringArray("*.png ; PNG File")
use_native_dialog = true

[node name="TypeChangeWindow" parent="CanvasLayer/Dialogs" instance=ExtResource("6_xn5xa")]
visible = false

[node name="DiffWindow" parent="CanvasLayer/Dialogs" instance=ExtResource("11_3hrp5")]
visible = false

[node name="EvaluationWindow" parent="CanvasLayer/Dialogs" instance=ExtResource("11_8k5ry")]
visible = false

[node name="ContextMenus" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0

[node name="ImageViewContextMenu" parent="CanvasLayer/ContextMenus" node_paths=PackedStringArray("_image_viewer") instance=ExtResource("12_p38sp")]
_image_viewer = NodePath("../../MainWindow/Middle/ImageViewer")

[node name="ProjectViewContextMenu" parent="CanvasLayer/ContextMenus" node_paths=PackedStringArray("_project_viewer") instance=ExtResource("13_sobsl")]
visible = false
layout_mode = 1
_project_viewer = NodePath("../../MainWindow/Middle/RightSide/ProjectViewer")

[connection signal="mouse_entered" from="CanvasLayer/MainWindow/Middle/RightSide/XMLTreeViewer" to="CanvasLayer/MainWindow/Middle/RightSide/XMLTreeViewer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MainWindow/Middle/RightSide/XMLTreeViewer" to="CanvasLayer/MainWindow/Middle/RightSide/XMLTreeViewer" method="_on_mouse_exited"]
